force-app/main/default/objects/Owner__c/fields/AD_UID__c.field-meta.xml
<CustomField>
    <fullName>AD_UID__c</fullName>
    <label>Active Directory UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>