force-app/main/default/objects/Owner__c/fields/Date_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Inactivated__c</fullName>
    <description>This is the Date that the Owner was Inactivated.</description>
    <inlineHelpText>This is the Date that the Owner was Inactivated.</inlineHelpText>
    <label>Date Inactivated</label>
    <type>DateTime</type>
</CustomField>