force-app/main/default/objects/Owner__c/fields/Dealer_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Dealer Owner&apos;s name from the Contact record
Field Type: Store Data
Integrated: Y/N</description>
    <inlineHelpText>This is the Dealer Owner&apos;s name from the Contact record</inlineHelpText>
    <label>Owner Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Owners</relationshipLabel>
    <relationshipName>Stores_Owned</relationshipName>
    <type>Lookup</type>
</CustomField>