force-app/main/default/objects/Owner__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This indicates if the Owner is Active.</description>
    <inlineHelpText>Owner activation is based on any related Dealers.  If all &quot;Owner for Dealer&quot; records are deactivated for an Owner, the Owner &amp; any/all associated Contact records will be inactivated and the current date will be set.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>