force-app/main/default/objects/Owner__c/listViews/Active_Store_Owners.listView-meta.xml
<ListView>
    <fullName>Active_Store_Owners</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Dealer_Owner_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_Inactivated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Store Owners</label>
</ListView>