force-app/main/default/objects/Owner__c/listViews/Store_Owners_Active_Inactive.listView-meta.xml
<ListView>
    <fullName>Store_Owners_Active_Inactive</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Dealer_Owner_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_Inactivated__c</columns>
    <filterScope>Everything</filterScope>
    <label>Store Owners (Active and Inactive)</label>
</ListView>